--- a/templates/authors/author_individual.html
+++ b/templates/authors/author_individual.html
@@ -2,11 +2,11 @@
 {% comment %} {% load i18n %} {% endcomment %}
 
 {% block title %}
-  Quotes by {{ current_author.author__author }} | Page {{ page_obj.number }} of {{ paginator.num_pages }}
+  Quotes by {{ current_author.author }} | Page {{ page_obj.number }} of {{ paginator.num_pages }}
 {% endblock %}
 
 {% block meta_desc %}
-  Discover the essence of {{ current_author.author__author }}'s philospohy and insights through a curated selection of memorable quotes. This page is page {{ page_obj.number }} of {{ paginator.num_pages }}.
+  Discover the essence of {{ current_author.author }}'s philospohy and insights through a curated selection of memorable quotes. This page is page {{ page_obj.number }} of {{ paginator.num_pages }}.
 {% endblock %}
 
 {% block base_content %}
@@ -18,7 +18,7 @@
             <a class="no-underline" href="{% url 'Quote_detail' quote_url=each.quote_id %}">{{ each.quote }}</a>
           </p>
           <div class="text-center md:hidden p-4">
-            <a target="_blank" rel="noopener" href="//x.com/intent/post?url=https://quotes.kirmola.dev{% url 'Quote_detail' quote_url=each.quote_id %}&text=Read+this+awesome+quote+by+{{ current_author.author__author }}" class="mx-2 btn btn-icon btn-twitter">
+            <a target="_blank" rel="noopener" href="//x.com/intent/post?url=https://quotes.kirmola.dev{% url 'Quote_detail' quote_url=each.quote_id %}&text=Read+this+awesome+quote+by+{{ current_author.author }}" class="mx-2 btn btn-icon btn-twitter">
                 <svg width="24" height="24" viewBox="0 0 300 271" xmlns="http://www.w3.org/2000/svg">
                     <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
                   </svg>
@@ -42,7 +42,7 @@
         <div class="justify-between card-footer">
           {% comment %} <a class="btn rounded-full btn-light-primary btn-sm" href="">{{ each }}</a> {% endcomment %}
           <div class="hidden md:block">
-            <a target="_blank" rel="noopener" href="//x.com/intent/post?url=https://quotes.kirmola.dev{% url 'Quote_detail' quote_url=each.quote_id %}&text=Read+this+awesome+quote+by+{{ current_author.author__author }}" class="btn btn-icon btn-twitter">
+            <a target="_blank" rel="noopener" href="//x.com/intent/post?url=https://quotes.kirmola.dev{% url 'Quote_detail' quote_url=each.quote_id %}&text=Read+this+awesome+quote+by+{{ current_author.author }}" class="btn btn-icon btn-twitter">
                 <svg width="24" height="24" viewBox="0 0 300 271" xmlns="http://www.w3.org/2000/svg">
                     <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
                   </svg>
@@ -81,11 +81,11 @@
 
           {% if each == page_obj.number %}
           
-            <a href="{% url 'author_paginator' page=each author_name=current_author.author %}" class="pagination-link pagination-active">{{each}}</a>
+            <a href="{% url 'author_paginator' page=each author_name=current_author.author_slug %}" class="pagination-link pagination-active">{{each}}</a>
 
           {% else %}
 
-            <a href="{% url 'author_paginator' page=each author_name=current_author.author %}" class="pagination-link">{{each}}</a>
+            <a href="{% url 'author_paginator' page=each author_name=current_author.author_slug %}" class="pagination-link">{{each}}</a>
           
           {% endif %}
         
