--- a/templates/quote.html
+++ b/templates/quote.html
@@ -16,13 +16,13 @@
       <div class="card">
          <div class="card-body">
             <div class="flex flex-col">
-               <a class="rounded-lg w-full mb-4" href="{% get_media_prefix %}{{object.quote_id}}-1.png" data-fancybox="gallery" >
-                  <img class="w-full h-auto rounded-lg" src="{% get_media_prefix %}{{object.quote_id}}-1.png" alt="Large Image">
+               <a class="rounded-lg w-full mb-4" href="https://kmcdn.kirmola.dev/{{object.quote_id}}-1.png" data-fancybox="gallery" >
+                  <img class="w-full h-auto rounded-lg" src="https://kmcdn.kirmola.dev/{{object.quote_id}}-1.png" alt="Large Image">
                </a> 
                <div class="flex justify-between">
                   {% for i,j in images %}
-                     <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{i}}" data-fancybox="gallery">
-                       <img class="w-full h-auto rounded-md" src="{% get_media_prefix %}{{j}}" alt="Small Image">
+                     <a class="rounded-md w-1/4 mx-0.5" href="https://kmcdn.kirmola.dev/{{i}}" data-fancybox="gallery">
+                       <img class="w-full h-auto rounded-md" src="https://kmcdn.kirmola.dev/{{j}}" alt="Small Image">
                      </a>
                   {% endfor %}
                </div>
@@ -74,22 +74,22 @@
    </div>
    <div class="p-2 order-4 md:order-4">
       
-      <div class="flex justify-between">
-                  <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{object.quote_id}}-2.png" data-fancybox="gallery" >
+      <div class="flex">
+                  <a class="rounded-md w-1/4 mx-0.5" href="https://kmcdn.kirmola.dev/{{object.quote_id}}-2.png" data-fancybox="gallery" >
 
-                     <img class="rounded-md" src="{% get_media_prefix %}{{object.quote_id}}-2-thumb.png" alt="Small Image 2">
+                     <img class="rounded-md" src="https://kmcdn.kirmola.dev/{{object.quote_id}}-2-thumb.png" alt="Small Image 2">
                   </a>
-                  {% comment %} <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{object.quote_id}}-2.png" data-fancybox="gallery" >
+                  <a class="rounded-md w-1/4 mx-0.5" href="https://kmcdn.kirmola.dev/{{object.quote_id}}-3.png" data-fancybox="gallery" >
 
-                     <img class="rounded-md" src="{% get_media_prefix %}{{object.quote_id}}-2-thumb.png" alt="Small Image 3">
+                     <img class="rounded-md" src="https://kmcdn.kirmola.dev/{{object.quote_id}}-3-thumb.png" alt="Small Image 3">
                   </a>
-                  <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{object.quote_id}}-1.png" data-fancybox="gallery" >
+                  {% comment %} <a class="rounded-md w-1/4 mx-0.5" href="https://kmcdn.kirmola.dev/{{object.quote_id}}-4.png" data-fancybox="gallery" >
                      
-                     <img class="rounded-md" src="{% get_media_prefix %}{{object.quote_id}}-1-thumb.png" alt="Small Image 3">
+                     <img class="rounded-md" src="https://kmcdn.kirmola.dev/{{object.quote_id}}-4-thumb.png" alt="Small Image 3">
                   </a>
-                  <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{object.quote_id}}-1.png" data-fancybox="gallery" >
+                  <a class="rounded-md w-1/4 mx-0.5" href="https://kmcdn.kirmola.dev/{{object.quote_id}}-1.png" data-fancybox="gallery" >
                      
-                     <img class="rounded-md" src="{% get_media_prefix %}{{object.quote_id}}-1-thumb.png" alt="Small Image 3">
+                     <img class="rounded-md" src="https://kmcdn.kirmola.dev/{{object.quote_id}}-1-thumb.png" alt="Small Image 3">
                   </a> {% endcomment %}
       </div>
 
