--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
     <script defer src="{% static "js/main.js" %}"></script>
     {% block custom_css_js %}{% endblock custom_css_js %}
     <meta name="description" content="{% block meta_desc %}{% endblock meta_desc %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'icons/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'icons/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'icons/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'site.webmanifest' %}">
 
     {% comment %} {% for lang in LANGUAGES %}
     <link rel="alternate" hreflang="{{ lang.0 }}" href="{% translateURL request.path lang.0 %}"/>
