--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -11,7 +11,7 @@
           <a href="https://kirmola.dev" class="btn btn-sm btn-link btn-outline-success">My Website</a>
           <a href="{% url "topics" %}" class="btn btn-sm btn-link">Topics</a>
           <a href="{% url "authors_by_alphabet" alphabet="a" %}" class="btn btn-sm btn-link">Authors</a>
-          <a href="{% url "qotd" %}" class="btn btn-sm btn-link">Quote of the Day</a>
+          <a href="{% url "qotd" %}" class="btn btn-sm btn-link">Featured Quote</a>
           {% comment %} <a href="#" class="btn btn-sm btn-link">Blog</a>
           <a href="#" class="btn btn-sm btn-link">Company</a>
           <a href="#" class="btn btn-sm btn-link">Sign in</a> {% endcomment %}
@@ -77,7 +77,7 @@
             <a href="{% url "topics" %}" class="w-full btn btn-link">Topics</a>
             <a href="{% url "authors_by_alphabet" alphabet="a" %}" class="w-full btn btn-link">Authors</a>
             <a href="{% url "contact" %}" class="w-full btn btn-link">Contact</a>
-            <a href="{% url "qotd" %}" class="w-full btn btn-link">Quote of the Day</a>
+            <a href="{% url "qotd" %}" class="w-full btn btn-link">Featured Quote</a>
             {% comment %} <div class="form-icon">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
